removed mondo-projen

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -294,13 +294,13 @@
       },
       "steps": [
         {
-          "exec": "pnpm dlx npm-check-updates@16 --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@mondo/projen-projects,lerna,lerna-projen,projen,ts-node,typescript"
+          "exec": "pnpm dlx npm-check-updates@16 --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=lerna,lerna-projen,projen,ts-node,typescript"
         },
         {
           "exec": "pnpm i --no-frozen-lockfile"
         },
         {
-          "exec": "pnpm update @mondo/projen-projects constructs lerna lerna-projen projen standard-version ts-node typescript"
+          "exec": "pnpm update constructs lerna lerna-projen projen standard-version ts-node typescript"
         },
         {
           "exec": "npx projen"
