--- a/packages/mondo-fetch/.eslintrc.json
+++ b/packages/mondo-fetch/.eslintrc.json
@@ -7,9 +7,7 @@
   "root": true,
   "plugins": [
     "@typescript-eslint",
-    "import",
-    "check-file",
-    "no-only-tests"
+    "import"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -82,7 +80,10 @@
       "error",
       "consistent"
     ],
-    "object-curly-spacing": "error",
+    "object-curly-spacing": [
+      "error",
+      "always"
+    ],
     "object-curly-newline": [
       "error",
       {
@@ -111,7 +112,7 @@
     ],
     "curly": [
       "error",
-      "multi",
+      "multi-line",
       "consistent"
     ],
     "@typescript-eslint/member-delimiter-style": [
@@ -119,7 +120,7 @@
     ],
     "semi": [
       "error",
-      "never"
+      "always"
     ],
     "max-len": [
       "error",
@@ -214,48 +215,7 @@
           "method"
         ]
       }
-    ],
-    "nonblock-statement-body-position": [
-      "error",
-      "below"
-    ],
-    "check-file/filename-naming-convention": [
-      "error",
-      {
-        "**/*.{js,ts}": "CAMEL_CASE"
-      },
-      {
-        "ignoreMiddleExtensions": true
-      }
-    ],
-    "check-file/folder-naming-convention": [
-      "error",
-      {
-        "src/**/": "CAMEL_CASE",
-        "test*/**/": "CAMEL_CASE",
-        "stack*/**/": "CAMEL_CASE"
-      }
-    ],
-    "@typescript-eslint/no-unused-vars": [
-      "error",
-      {
-        "vars": "local",
-        "argsIgnorePattern": "^_",
-        "varsIgnorePattern": "^_",
-        "caughtErrorsIgnorePattern": "^_"
-      }
-    ],
-    "no-unused-vars": "off",
-    "no-only-tests/no-only-tests": "error"
+    ]
   },
-  "overrides": [
-    {
-      "files": [
-        "tests/testHarness/**"
-      ],
-      "rules": {
-        "@typescript-eslint/no-floating-promises": "off"
-      }
-    }
-  ]
+  "overrides": []
 }
