--- a/packages/mondo-result-types/.eslintrc.json
+++ b/packages/mondo-result-types/.eslintrc.json
@@ -7,9 +7,7 @@
   "root": true,
   "plugins": [
     "@typescript-eslint",
-    "import",
-    "check-file",
-    "no-only-tests"
+    "import"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -218,44 +216,7 @@
     "nonblock-statement-body-position": [
       "error",
       "below"
-    ],
-    "check-file/filename-naming-convention": [
-      "error",
-      {
-        "**/*.{js,ts}": "CAMEL_CASE"
-      },
-      {
-        "ignoreMiddleExtensions": true
-      }
-    ],
-    "check-file/folder-naming-convention": [
-      "error",
-      {
-        "src/**/": "CAMEL_CASE",
-        "test*/**/": "CAMEL_CASE",
-        "stack*/**/": "CAMEL_CASE"
-      }
-    ],
-    "@typescript-eslint/no-unused-vars": [
-      "error",
-      {
-        "vars": "local",
-        "argsIgnorePattern": "^_",
-        "varsIgnorePattern": "^_",
-        "caughtErrorsIgnorePattern": "^_"
-      }
-    ],
-    "no-unused-vars": "off",
-    "no-only-tests/no-only-tests": "error"
+    ]
   },
-  "overrides": [
-    {
-      "files": [
-        "tests/testHarness/**"
-      ],
-      "rules": {
-        "@typescript-eslint/no-floating-promises": "off"
-      }
-    }
-  ]
+  "overrides": []
 }
