--- a/packages/mondo-result-types/package.json
+++ b/packages/mondo-result-types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mondo/mondopower-result-types",
+  "name": "@mondopower/result-types",
   "description": "Library to use for result type of typescript functions and helper functions.",
   "repository": {
     "type": "git",
@@ -22,13 +22,7 @@
     "watch": "npx projen watch",
     "projen": "npx projen"
   },
-  "author": {
-    "name": "Mondo Power",
-    "email": "MondoUbiDevelopers@mondo.com.au",
-    "organization": false
-  },
   "devDependencies": {
-    "@mondo/projen-projects": "^2",
     "@types/chai": "^4.3.13",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18",
@@ -38,9 +32,7 @@
     "constructs": "^10.0.0",
     "eslint": "^8",
     "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-check-file": "^2.7.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-no-only-tests": "^3.1.0",
     "mocha": "^9.2.2",
     "projen": "^0.80.11",
     "ts-eager": "^2.0.2",
