Added eslint rules to mondo-fetch

--- a/packages/mondo-fetch/.eslintrc.json
+++ b/packages/mondo-fetch/.eslintrc.json
@@ -80,10 +80,7 @@
       "error",
       "consistent"
     ],
-    "object-curly-spacing": [
-      "error",
-      "always"
-    ],
+    "object-curly-spacing": "error",
     "object-curly-newline": [
       "error",
       {
@@ -112,7 +109,7 @@
     ],
     "curly": [
       "error",
-      "multi-line",
+      "multi",
       "consistent"
     ],
     "@typescript-eslint/member-delimiter-style": [
@@ -120,7 +117,7 @@
     ],
     "semi": [
       "error",
-      "always"
+      "never"
     ],
     "max-len": [
       "error",
@@ -215,6 +212,10 @@
           "method"
         ]
       }
+    ],
+    "nonblock-statement-body-position": [
+      "error",
+      "below"
     ]
   },
   "overrides": []
