--- a/packages/mondo-fetch/package.json
+++ b/packages/mondo-fetch/package.json
@@ -24,19 +24,18 @@
     "projen": "npx projen"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "^18",
-    "@typescript-eslint/eslint-plugin": "^6",
-    "@typescript-eslint/parser": "^6",
-    "constructs": "^10.0.0",
-    "eslint": "^8",
+    "@stylistic/eslint-plugin": "^2",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^18.19.67",
+    "@typescript-eslint/eslint-plugin": "^8",
+    "@typescript-eslint/parser": "^8",
+    "eslint": "^9",
     "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
     "jest-junit": "^15",
-    "projen": "^0.80.12",
-    "ts-jest": "^29.1.2",
-    "typedoc": "^0.25.12",
+    "ts-jest": "^29.2.5",
+    "typedoc": "^0.27.2",
     "typescript": "^4.9.5"
   },
   "dependencies": {
@@ -55,9 +54,10 @@
   },
   "version": "0.0.0",
   "jest": {
+    "coverageProvider": "v8",
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
-      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
+      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
+      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
