--- a/packages/mondo-result-types/.eslintrc.json
+++ b/packages/mondo-result-types/.eslintrc.json
@@ -7,7 +7,8 @@
   "root": true,
   "plugins": [
     "@typescript-eslint",
-    "import"
+    "import",
+    "@stylistic"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -44,7 +45,7 @@
     "indent": [
       "off"
     ],
-    "@typescript-eslint/indent": [
+    "@stylistic/indent": [
       "error",
       2
     ],
@@ -109,15 +110,15 @@
     ],
     "curly": [
       "error",
-      "multi",
+      "multi-line",
       "consistent"
     ],
-    "@typescript-eslint/member-delimiter-style": [
+    "@stylistic/member-delimiter-style": [
       "error"
     ],
     "semi": [
       "error",
-      "never"
+      "always"
     ],
     "max-len": [
       "error",
@@ -164,7 +165,7 @@
         }
       }
     ],
-    "no-duplicate-imports": [
+    "import/no-duplicates": [
       "error"
     ],
     "no-shadow": [
