--- a/packages/mondo-result-types/package.json
+++ b/packages/mondo-result-types/package.json
@@ -23,20 +23,19 @@
     "projen": "npx projen"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.14",
+    "@stylistic/eslint-plugin": "^2",
+    "@types/chai": "^4.3.20",
     "@types/mocha": "^9.1.1",
-    "@types/node": "^18",
-    "@typescript-eslint/eslint-plugin": "^6",
-    "@typescript-eslint/parser": "^6",
-    "chai": "^4.4.1",
-    "constructs": "^10.0.0",
-    "eslint": "^8",
+    "@types/node": "^18.19.67",
+    "@typescript-eslint/eslint-plugin": "^8",
+    "@typescript-eslint/parser": "^8",
+    "chai": "^4.5.0",
+    "eslint": "^9",
     "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.31.0",
     "mocha": "^9.2.2",
-    "projen": "^0.80.12",
     "ts-eager": "^2.0.2",
-    "typedoc": "^0.25.12",
+    "typedoc": "^0.27.2",
     "typescript": "^4.9.5"
   },
   "keywords": [
